Add more information

--- a/ds1/achievements/lordvessel/index.html
+++ b/ds1/achievements/lordvessel/index.html
@@ -231,17 +231,34 @@
                                     lightning-based.</li>
                                 <li>Use summons (e.g. Solaire) or human phantoms to split aggro.</li>
                             </ul>
-                            <strong>Note:</strong> After the fight, speak with Gwynevere to receive the Lordvessel
-                            automatically.
+
                         </li>
-                        <li>You can place the Lordvessel at Firelink Altar by siding with Frampt or Kaathe — this
-                            affects lore but not achievement progress. If you don't know who Kaathe is, be careful
-                            researching. You may encounter spoilers. I plan to add a useful guide to finding out without
-                            spoilers in the future. Stay tuned!</li>
-                        <li>Using the Lordvessel enables fast travel between major bonfires.</li>
                     </ul>
                 </li>
             </ol>
+        </div>
+        <div class="guide-section">
+            <h3>Lordvessel</h3>
+            <p>Things to know:</p>
+            <ol>
+                <li>You can place the Lordvessel at Firelink Altar by siding with Frampt or Kaathe — this
+                    affects lore but not achievement progress. <ul>
+                        <li>If you don't know who Kaathe is, be careful
+                            researching, you may encounter spoilers! I plan to add a useful guide to finding out without
+                            spoilers in the future. There are specific 'requirements' that must be met in order to
+                            encounter him. If you want to know what they are, see <a
+                                href="../covenant-darkwraith/index.html">this guide</a></li>
+                        <li>This is a tricky subject, but I almost recommend <em>missing</em> the darkwraith covenant on
+                            your first playthrough. In order to 100% the game, you need 3 playthroughs anyway. However,
+                            if you <em>really </em> want to get that covenant, there are specific requirements. again,
+                            see <a href="../covenant-darkwraith/index.html">this guide</a></li>
+                    </ul>
+                </li>
+                <li>Using the Lordvessel enables fast travel between major bonfires.</li>
+                </ul>
+            </ol>
+            <strong>Note:</strong> After the fight, speak with Gwynevere to receive the Lordvessel
+            automatically.
         </div>
 
         <a href="../../index.html" class="back-button">Back to All Achievements</a>
