Add darkwraith endpoint

--- a/ds1/achievements/lordvessel/index.html
+++ b/ds1/achievements/lordvessel/index.html
@@ -250,7 +250,7 @@
                                 href="../covenant-darkwraith/index.html">this guide</a></li>
                         <li>This is a tricky subject, but I almost recommend <em>missing</em> the darkwraith covenant on
                             your first playthrough. In order to 100% the game, you need 3 playthroughs anyway. However,
-                            if you <em>really </em> want to get that covenant, there are specific requirements. again,
+                            if you <em>really </em> want to get that covenant, there are specific requirements. Again,
                             see <a href="../covenant-darkwraith/index.html">this guide</a></li>
                     </ul>
                 </li>
