Add more information

--- a/ds1/achievements/covenant-darkwraith/index.html
+++ b/ds1/achievements/covenant-darkwraith/index.html
@@ -192,13 +192,13 @@
         <a href="../../../index.html">Home</a> >
         <a href="../../landing-page.html">Dark Souls: Remastered</a> >
         <a href="../index.html">All Achievement Guides</a> >
-        Darkwraith
+        Covenant: Darkwraith
     </div>
 
     <div class="achievement-container">
         <div class="achievement-header">
             <div class="achievement-info">
-                <h2 class="achievement-title">Darkwraith</h2>
+                <h2 class="achievement-title">Covenant: Darkwraith</h2>
                 <p class="achievement-description">Discover the Darkwraith Covenant.</p>
             </div>
             <span class="difficulty-tag">Hard</span>
@@ -216,8 +216,12 @@
             <h3>Step-by-Step Guide</h3>
             <ol>
                 <li>Progress through the game until you defeat Ornstein and Smough and receive the
-                    <strong>Lordvessel</strong>.</li>
-                <li><strong>Do NOT speak to Frampt</strong> or place the Lordvessel at Firelink Altar.</li>
+                    <strong>Lordvessel</strong>.
+                </li>
+                <li><strong>Do NOT speak to Frampt</strong> or place the Lordvessel at Firelink Altar. I REPEAT. STAY AS
+                    FAR AWAY FROM FRAMPT AS POSSIBLE. If you place the Lordvessel under his intructions, you will be
+                    locked out of this achievement on this 'game' (you can get it on a different character or in NG).
+                </li>
                 <li>Head to <strong>New Londo Ruins</strong> (below Firelink Shrine).</li>
                 <li>
                     Drain the water in the ruins:
@@ -231,7 +235,11 @@
                     <ul>
                         <li>You must wear the <strong>Covenant of Artorias</strong> ring (from killing Sif) to survive
                             in the Abyss.</li>
-                        <li>Equip the ring before entering the boss fog or you will die instantly.</li>
+                        <li>Equip the ring before entering the boss fog or you will die instantly. Full guide on getting
+                            the ring can be found <a href="../abysswalking/index.html">here</a></li>
+                        <li>Full guide on 4 kings fight can be found <a href="../four-kings/index.html">here</a>,
+                            although this fight will be even trickier (you will likely be lower level). As such, this is
+                            more of a skill-/DPS-check than usual. Good luck!</li>
                     </ul>
                 </li>
                 <li>
