Add more information

--- a/ds1/achievements/covenant-darkwraith/index.html
+++ b/ds1/achievements/covenant-darkwraith/index.html
@@ -234,13 +234,17 @@
                 <li>Prepare for the Four Kings:
                     <ul>
                         <li>You must wear the <strong>Covenant of Artorias</strong> ring (from killing Sif) to survive
-                            in the Abyss.</li>
-                        <li>Equip the ring before entering the boss fog or you will die instantly. Full guide on getting
-                            the ring can be found <a href="../abysswalking/index.html">here</a></li>
-                        <li>Full guide on 4 kings fight can be found <a href="../four-kings/index.html">here</a>,
-                            although this fight will be even trickier (you will likely be lower level). As such, this is
-                            more of a skill-/DPS-check than usual. Good luck!</li>
+                            in the Abyss. <ul>
+                                <li>Full guide on getting
+                                    the ring can be found <a href="../abysswalking/index.html">here</a></li>
+                        </li>
                     </ul>
+                </li>
+                <li>Equip the ring before traversing the abyss or you will die instantly.</li>
+                <li>Full guide on 4 kings fight can be found <a href="../four-kings/index.html">here</a>,
+                    although this fight will be even trickier (you will likely be lower level). As such, this is
+                    more of a skill-/DPS-check than usual. Good luck!</li>
+                </ul>
                 </li>
                 <li>
                     Defeat the <strong>Four Kings</strong> boss.
