Add more information

--- a/ds1/achievements/covenant-darkwraith/index.html
+++ b/ds1/achievements/covenant-darkwraith/index.html
@@ -259,7 +259,8 @@
                     <ul>
                         <li>Speak with him to join the <strong>Darkwraith Covenant</strong>.</li>
                         <li>He will also allow you to place the Lordvessel afterward.</li>
-                        <li><strong>Note:</strong> Once you talk to Kaathe, Frampt will disappear from Firelink Shrine
+                        <li><strong>Note:</strong> Once you talk to Kaathe, Frampt will express his displeasure with
+                            you, and disappear from Firelink Shrine
                             permanently.</li>
                     </ul>
                 </li>
@@ -269,8 +270,9 @@
         <div class="guide-section">
             <h3>Rewards</h3>
             <ul>
-                <li>Join the covenant to receive the <strong>Dark Hand</strong> weapon (absorbs humanity from NPCs and
-                    players).</li>
+                <li>Join the covenant to receive the <strong>Dark Hand</strong> (absorbs humanity from NPCs and
+                    players); a weapon necessary for the <a href="../knights-honor/index.html">Knight's Honor</a>
+                    achievement. </li>
                 <li>Rank up by giving Kaathe <strong>Humanity</strong> to receive Red Eye Orbs and the Darkwraith armor
                     set.</li>
                 <li>Unlocks PvP invasion mechanic via Red Eye Orb (infinite use).</li>
