Add lore section

--- a/ds1/achievements/covenant-darkwraith/index.html
+++ b/ds1/achievements/covenant-darkwraith/index.html
@@ -284,6 +284,25 @@
             <p>Placing the Lordvessel with Frampt (even just speaking to him and falling in) will lock you out of this
                 covenant for the rest of the game.</p>
         </div>
+        <div class="guide-section">
+            <a name="four-kings-lore"></a>
+            <h3>Lore: The Fall of the Four Kings</h3>
+            <p>The Four Kings were once noble rulers of New Londo, granted fragments of a Great Soul by Lord Gwyn
+                himself. In their loyalty, they accepted this power to protect their kingdom — but this choice
+                ultimately led to ruin.</p>
+            <p>Seduced by the primordial serpent <strong>Darkstalker Kaathe</strong>, they fell to the influence of the
+                Abyss. In their pursuit of power and humanity, they began draining it from their people, becoming
+                twisted, spectral figures.</p>
+            <p>To stop the spread of the Abyss, and trap the darkwraiths, New Londo was flooded by its own sealers —
+                sacrificing thousands of
+                innocent lives to contain the darkness.</p>
+            <p>Despite their monstrous form, remnants of their knightly honor still echo in battle. They don't revel in
+                your destruction — they drag you into their realm because they believe you too might share their fate.
+            </p>
+            <p>This tragic fall from grace serves as a key origin point for the <strong>Darkwraiths</strong> and their
+                belief in the strength of humanity and the coming of the Dark Lord.</p>
+        </div>
+
 
         <a href="../../index.html" class="back-button">Back to All Achievements</a>
     </div>
