Add rough implementation for chaos servant

--- a/ds1/achievements/covenant-chaos-servant/index.html
+++ b/ds1/achievements/covenant-chaos-servant/index.html
@@ -199,67 +199,29 @@
         <div class="achievement-header">
             <div class="achievement-info">
                 <h2 class="achievement-title">Covenant: Chaos Servant</h2>
-                <p class="achievement-description">Covenant: Chaos Servant</p>
+                <p class="achievement-description">Discover Chaos Servant Covenant</p>
             </div>
             <span class="difficulty-tag">Medium</span>
         </div>
 
         <div class="guide-section">
             <h3>Overview</h3>
-            <p>Quick tagline.</p>
-            <p>Deeper explanation.</p>
+            <p>The <strong>Chaos Servant</strong> covenant is located behind a hidden wall in <em>Quelaag's Domain</em>,
+                shortly after the boss fight. The covenant is associated with <strong>Quelaag's Sister</strong>, also
+                known as the Fair Lady.</p>
+            <p>Use the Bonfire in the boss room, then strike the wall to the right to reveal a hidden passage. You'll
+                find the Fair Lady behind an illusory wall. Speak with her and you will be given the option to join.</p>
         </div>
 
         <div class="guide-section">
-            <h3>Additional Information</h3>
-            <p>Information on [input]:</p>
-            <ol>
-                <li>.</li>
-                <li>
-                    nested list:
-                    <ul>
-                        <li>.</li>
-                        <li>
-                            nested list:
-                            <ul>
-                                <li>.</li>
-                                <li>.</li>
-                                <li>.</li>
-                                <li>.</li>
-                            </ul>
-                            <strong>Note:</strong> note
-                        </li>
-                        <li>.</li>
-                        <li>.</li>
-                    </ul>
-                </li>
-            </ol>
-        </div>
-
-        <div class="guide-section">
-            <h3>Additional Information</h3>
-            <p>Information on [input]:</p>
-            <ol>
-                <li>.</li>
-                <li>
-                    nested list:
-                    <ul>
-                        <li>.</li>
-                        <li>
-                            nested list:
-                            <ul>
-                                <li>.</li>
-                                <li>.</li>
-                                <li>.</li>
-                                <li>.</li>
-                            </ul>
-                            <strong>Note:</strong> note
-                        </li>
-                        <li>.</li>
-                        <li>.</li>
-                    </ul>
-                </li>
-            </ol>
+            <h3>Additional Information: The Fair Lady</h3>
+            <ul>
+                <li>Also called the Daughter of Chaos. She is mute unless you have the Old Witch's Ring equipped.</li>
+                <li>Joining her covenant allows you to offer Humanity to increase rank and unlock rewards.</li>
+                <li>At Rank 2 (30 Humanity), the shortcut to Lost Izalith will open.</li>
+                <li><strong>Note:</strong> You can save Solaire from going mad if you open the shortcut before he
+                    reaches that area.</li>
+            </ul>
         </div>
 
         <a href="../index.html" class="back-button">Back to All Achievements</a>
@@ -269,5 +231,6 @@
         <p>Dark Souls: Remastered Achievement Guide - Praise the Sun!</p>
     </footer>
 </body>
+
 
 </html>
