--- a/ds1/achievements/covenant-chaos-servant/index.html
+++ b/ds1/achievements/covenant-chaos-servant/index.html
@@ -216,12 +216,34 @@
         <div class="guide-section">
             <h3>Additional Information: The Fair Lady</h3>
             <ul>
-                <li>Also called the Daughter of Chaos. She is mute unless you have the Old Witch's Ring equipped.</li>
+                <li>Also called the Daughter of Chaos. She is mute unless you have the Old Witch's Ring equipped. Upon
+                    acquiring the said ring, I highly recommend going through her dialogue... it's quite heart-breaking.
+                </li>
                 <li>Joining her covenant allows you to offer Humanity to increase rank and unlock rewards.</li>
-                <li>At Rank 2 (30 Humanity), the shortcut to Lost Izalith will open.</li>
-                <li><strong>Note:</strong> You can save Solaire from going mad if you open the shortcut before he
-                    reaches that area.</li>
+                <li>At Rank 1 (10 Humanity), you receive the Great Chaos Fireball pyromancy.</li>
+                <li>At Rank 2 (30 Humanity), the shortcut to Lost Izalith will open — useful for skipping parts of the
+                    area and saving Solaire.</li>
+                <li><strong>Note:</strong> If you betray the covenant by attacking the Fair Lady or joining an opposing
+                    covenant, your rank will be lost.</li>
             </ul>
+        </div>
+
+        <div class="guide-section">
+            <h3>What Are Covenants?</h3>
+            <p>Covenants in <em>Dark Souls</em> are like factions or alliances that your character can join. Each one
+                has its own theme, tiered reward structure, and impact on both single-player and online gameplay.</p>
+            <ul>
+                <li>Some covenants are focused on co-op and helping other players.</li>
+                <li>Others are more PvP-oriented, encouraging invasions or duels.</li>
+                <li>Each covenant offers different spells, equipment, or story interactions as rewards for your loyalty.
+                </li>
+                <li>Each covenant will require items to reach higher ranks (higher ranks unlock better rewards), but
+                    most covenants require different items.</li>
+                <li><strong>Note:</strong> You can only be in one covenant at a time. Leaving or <em>betraying</em> a
+                    covenant can have consequences.</li>
+            </ul>
+            <p>The <strong>Chaos Servant</strong> is considered one of the more mysterious covenants and is tied to the
+                Witch of Izalith's legacy.</p>
         </div>
 
         <a href="../index.html" class="back-button">Back to All Achievements</a>
