Add more information

--- a/ds1/achievements/four-kings/index.html
+++ b/ds1/achievements/four-kings/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rite of Kindling</title>
+    <title>Four Kings</title>
     <style>
         :root {
             --background: #121212;
@@ -198,8 +198,8 @@
     <div class="achievement-container">
         <div class="achievement-header">
             <div class="achievement-info">
-                <h2 class="achievement-title">Four Kings</h2>
-                <p class="achievement-description">Defeat the Four Kings.</p>
+                <h2 class="achievement-title">Defeat the Four Kings</h2>
+                <p class="achievement-description">Defeat the Four Kings, inheritors of souls.</p>
             </div>
             <span class="difficulty-tag">Medium</span>
         </div>
@@ -218,7 +218,11 @@
             <h3>Preparation</h3>
             <ul>
                 <li><strong>You must have the Covenant of Artorias ring</strong> (from defeating Sif) to survive the
-                    Abyss.</li>
+                    Abyss.<ul>
+                        <li>Full guide on getting
+                            the ring can be found <a href="../abysswalking/index.html">here</a></li>
+                    </ul>
+                </li>
                 <li>High DPS is recommended — the longer the fight goes, the more Kings spawn.</li>
                 <li>Bring fast weapons, a strong shield or armor, and high poise if possible.</li>
             </ul>
@@ -228,10 +232,7 @@
             <h3>Strategy</h3>
             <ol>
                 <li>Equip the <strong>Covenant of Artorias</strong> before dropping into the Abyss — you will die
-                    instantly without it.<ul>
-                        <li>Full guide on getting
-                            the ring can be found <a href="../abysswalking/index.html">here</a></li>
-                    </ul>
+                    instantly without it.
                 </li>
                 <li>Once in the Abyss, the first King spawns after a few seconds. Stay aggressive.</li>
                 <li>
