--- a/ds1/achievements/rite-of-kindling/index.html
+++ b/ds1/achievements/rite-of-kindling/index.html
@@ -199,64 +199,43 @@
         <div class="achievement-header">
             <div class="achievement-info">
                 <h2 class="achievement-title">Rite of Kindling</h2>
-                <p class="achievement-description">Rite of Kindling</p>
+                <p class="achievement-description">Acquire the Rite of Kindling.</p>
             </div>
             <span class="difficulty-tag">Medium</span>
         </div>
 
         <div class="guide-section">
             <h3>Overview</h3>
-            <p>Quick tagline.</p>
-            <p>Deeper explanation.</p>
+            <p>The Rite of Kindling lets you kindle bonfires beyond the default 5 Estus — up to 20 with enough humanity.
+            </p>
+            <p>It’s obtained by defeating Pinwheel in the Catacombs, but getting there can be a pain. The boss is easy,
+                but the enemies and pitfalls leading to him can be frustrating.</p>
         </div>
 
         <div class="guide-section">
             <h3>Additional Information</h3>
-            <p>Information on [input]:</p>
+            <p>Information on boss fight:</p>
             <ol>
-                <li>.</li>
+                <li>Boss Location: End of the Catacombs (from Firelink, take the graveyard path down).</li>
                 <li>
-                    nested list:
+                    Pinwheel Fight + Catacombs Hazards:
                     <ul>
-                        <li>.</li>
+                        <li>The Catacombs are filled with skeletons that respawn unless killed with divine weapons.</li>
                         <li>
-                            nested list:
+                            Tips for Reaching the Boss:
                             <ul>
-                                <li>.</li>
-                                <li>.</li>
-                                <li>.</li>
-                                <li>.</li>
+                                <li>Bring a Divine weapon to permanently kill skeletons (or kill necromancers quickly).
+                                </li>
+                                <li>Watch for pressure plates — traps are everywhere.</li>
+                                <li>Use the bonfire halfway down the Catacombs to save progress.</li>
+                                <li>Rolling or being knocked off ledges = common deaths.</li>
                             </ul>
-                            <strong>Note:</strong> note
+                            <strong>Note:</strong> Pinwheel himself is extremely weak; most players kill him on the
+                            first try. Dodge his clones and burst him down.
                         </li>
-                        <li>.</li>
-                        <li>.</li>
-                    </ul>
-                </li>
-            </ol>
-        </div>
-
-        <div class="guide-section">
-            <h3>Additional Information</h3>
-            <p>Information on [input]:</p>
-            <ol>
-                <li>.</li>
-                <li>
-                    nested list:
-                    <ul>
-                        <li>.</li>
-                        <li>
-                            nested list:
-                            <ul>
-                                <li>.</li>
-                                <li>.</li>
-                                <li>.</li>
-                                <li>.</li>
-                            </ul>
-                            <strong>Note:</strong> note
-                        </li>
-                        <li>.</li>
-                        <li>.</li>
+                        <li>After defeating Pinwheel, you’ll get the Rite of Kindling automatically.</li>
+                        <li>You can now kindle bonfires up to 20 Estus if you have enough Humanity and have joined the
+                            bonfire.</li>
                     </ul>
                 </li>
             </ol>
@@ -269,5 +248,6 @@
         <p>Dark Souls: Remastered Achievement Guide - Praise the Sun!</p>
     </footer>
 </body>
+
 
 </html>
